--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <img id="logo-boolean" src="./img/logo.svg" alt="logo-boolean">
+    </header>
 
 
 </body>
