--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Booleaner Blog</title>
     <link rel="shortcut icon" href="./img/magnifying-glass-solid.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 
 
 </head>
@@ -18,6 +18,9 @@
     <header>
         <img id="logo-boolean" src="./img/logo.svg" alt="logo-boolean">
     </header>
+    <main class="container">
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee.</h1>
+    </main>
 
 
 </body>
