[FEAT] lorem section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+
+
 
 
 </head>
@@ -19,7 +23,41 @@
         <img id="logo-boolean" src="./img/logo.svg" alt="logo-boolean">
     </header>
     <main class="container">
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee.</h1>
+        <div class="title">
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <p>Scritto da <span>The Booleaner</span></p>
+            <p>il 10/10/2020</p>
+        </div>
+        <div class="gallery">
+            <img src="./img/tim-1.jpg" alt="img John S.">
+            <img src="./img/tim-2.jpg" alt="img James L.">
+            <p>1st Photo: John S. and Hames L. Knight Foundation, by Scott Henrischsen</p>
+            <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+        </div>
+        <section class="lorem-description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad tempora corporis a ipsum molestiae, rem
+                possimus similique itaque sequi at in magni adipisci ipsam iure! Quod asperiores fuga amet
+                Lorem, ipsum
+                dolor sit amet consectetur adipisicing elit. Aut a reiciendis amet aspernatur impedit eos provident odit
+                optio! <span>Magnam eius quia ducimus suscipit iste molestias error odit rerum labore voluptates. Lorem
+                    ipsum
+                    dolor sit amet consectetur, adipisicing elit </span>. Voluptatem libero, sit autem aut ratione eum
+                molestias
+                distinctio saepe, similique deleniti quia nobis. Magnam a assumenda inventore sint ipsum commodi autem.
+            </p>
+        </section>
+        <section>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum dolores minima ullam,
+                    officiis sed
+                    voluptate repellat, quis dolorum culpa perferendis quae laboriosam.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, itaque natus? Nulla, doloremque,
+                    voluptatum debitis quam similique delectus asperiores doloribus.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, repellendus eligendi sed
+                    perferendis natus nemo voluptatem error ex quaerat porro et quam</li>
+            </ul>
+        </section>
+
     </main>
 
 
