[FEAT] ADDED TABLE

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 distinctio saepe, similique deleniti quia nobis. Magnam a assumenda inventore sint ipsum commodi autem.
             </p>
         </section>
-        <section>
+        <section class="lorem-description">
             <ul>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum dolores minima ullam,
                     officiis sed
@@ -56,6 +56,55 @@
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, repellendus eligendi sed
                     perferendis natus nemo voluptatem error ex quaerat porro et quam</li>
             </ul>
+        </section>
+        <section>
+            <table style="width: 100%;">
+                <thead>
+                    <tr>
+                        <td class="intestazione"><strong>Lorem ipsum dolor</strong></td>
+                        <td class="intestazione"><strong>Lorem ipsum dolor</strong></td>
+                        <td class="intestazione" style="width: 60%;"><strong>Lorem ipsum dolor</strong></td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt minus esse soluta nemo
+                            perspiciatis necessitatibus neque, deserunt dolor dolore eius optio distinctio similique
+                            laboriosam omnis nam? Magni vero eaque dicta.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt minus esse soluta nemo
+                            perspiciatis necessitatibus neque, deserunt dolor dolore eius optio distinctio similique
+                            laboriosam omnis nam? Magni vero eaque dicta.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt minus esse soluta nemo
+                            perspiciatis necessitatibus neque, deserunt dolor dolore eius optio distinctio similique
+                            laboriosam omnis nam? Magni vero eaque dicta.</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section class="lorem-description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad tempora corporis a ipsum molestiae, rem
+                possimus similique itaque sequi at in magni adipisci ipsam iure! Quod asperiores fuga amet
+                Lorem, ipsum
+                dolor sit amet consectetur adipisicing elit. Aut a reiciendis amet aspernatur impedit eos provident
+                odit
+                optio! <span>Magnam eius quia ducimus suscipit iste molestias error odit rerum labore voluptates.
+                    Lorem
+                    ipsum
+                    dolor sit amet consectetur, adipisicing elit </span>. Voluptatem libero, sit autem aut ratione
+                eum
+                molestias
+                distinctio saepe, similique deleniti quia nobis. Magnam a assumenda inventore sint ipsum commodi
+                autem. </p>
         </section>
 
     </main>
