--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
                 possimus similique itaque sequi at in magni adipisci ipsam iure! Quod asperiores fuga amet
                 Lorem, ipsum
                 dolor sit amet consectetur adipisicing elit. Aut a reiciendis amet aspernatur impedit eos provident odit
-                optio! <span>Magnam eius quia ducimus suscipit iste molestias error odit rerum labore voluptates. Lorem
-                    ipsum
-                    dolor sit amet consectetur, adipisicing elit </span>. Voluptatem libero, sit autem aut ratione eum
+                optio! <span>Magnam eius quia ducimus suscipit iste molestias error odit rerum labore voluptates</span>.
+                Lorem
+                ipsum
+                dolor sit amet consectetur, adipisicing elit. Voluptatem libero, sit autem aut ratione eum
                 molestias
                 distinctio saepe, similique deleniti quia nobis. Magnam a assumenda inventore sint ipsum commodi autem.
             </p>
@@ -97,17 +98,23 @@
                 Lorem, ipsum
                 dolor sit amet consectetur adipisicing elit. Aut a reiciendis amet aspernatur impedit eos provident
                 odit
-                optio! <span>Magnam eius quia ducimus suscipit iste molestias error odit rerum labore voluptates.
-                    Lorem
-                    ipsum
-                    dolor sit amet consectetur, adipisicing elit </span>. Voluptatem libero, sit autem aut ratione
-                eum
+                optio! >Magnam eius quia ducimus suscipit iste molestias error odit rerum labore voluptates.
+                Lorem
+                ipsum
+                dolor sit amet consectetur, adipisicing elit. <span>Voluptatem libero, sit autem aut ratione
+                    eum</span>
                 molestias
                 distinctio saepe, similique deleniti quia nobis. Magnam a assumenda inventore sint ipsum commodi
                 autem. </p>
         </section>
 
     </main>
+
+    <footer>
+        <h4>Potrebbero Interressarti</h4>
+        <div class="square first">Lorem ipsum dolor</div>
+        <div class="square second">Lorem ipsum dolor</div>
+    </footer>
 
 
 </body>
