[FIX] FINAL ADJUST TAG after validation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
@@ -22,19 +22,19 @@
     <header>
         <img id="logo-boolean" src="./img/logo.svg" alt="logo-boolean">
     </header>
-    <main class="container">
-        <div class="title">
+    <main id="container">
+        <div id="title">
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
             <p>Scritto da <span>The Booleaner</span></p>
             <p>il 10/10/2020</p>
         </div>
-        <div class="gallery">
+        <div id="gallery">
             <img src="./img/tim-1.jpg" alt="img John S.">
             <img src="./img/tim-2.jpg" alt="img James L.">
             <p>1st Photo: John S. and Hames L. Knight Foundation, by Scott Henrischsen</p>
             <p>2nd Photo: Wikimedia, by Paul Clarke</p>
         </div>
-        <section class="lorem-description">
+        <div class="lorem-description">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad tempora corporis a ipsum molestiae, rem
                 possimus similique itaque sequi at in magni adipisci ipsam iure! Quod asperiores fuga amet
                 Lorem, ipsum
@@ -46,8 +46,8 @@
                 molestias
                 distinctio saepe, similique deleniti quia nobis. Magnam a assumenda inventore sint ipsum commodi autem.
             </p>
-        </section>
-        <section class="lorem-description">
+        </div>
+        <div class="lorem-description">
             <ul>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum dolores minima ullam,
                     officiis sed
@@ -57,8 +57,8 @@
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, repellendus eligendi sed
                     perferendis natus nemo voluptatem error ex quaerat porro et quam</li>
             </ul>
-        </section>
-        <section>
+        </div>
+        <div>
             <table style="width: 100%;">
                 <thead>
                     <tr>
@@ -91,8 +91,8 @@
                     </tr>
                 </tbody>
             </table>
-        </section>
-        <section class="lorem-description">
+        </div>
+        <div class="lorem-description">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad tempora corporis a ipsum molestiae, rem
                 possimus similique itaque sequi at in magni adipisci ipsam iure! Quod asperiores fuga amet
                 Lorem, ipsum
@@ -106,12 +106,12 @@
                 molestias
                 distinctio saepe, similique deleniti quia nobis. Magnam a assumenda inventore sint ipsum commodi
                 autem. </p>
-        </section>
+        </div>
 
     </main>
 
     <footer>
-        <h4>Potrebbero Interressarti</h4>
+        <h3>Potrebbero Interressarti</h3>
         <div class="square first">Lorem ipsum dolor</div>
         <div class="square second">Lorem ipsum dolor</div>
     </footer>
