[FIX] ADDED PADDING IMGS FOOTER

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </main>
 
     <footer>
-        <h3>Potrebbero Interressarti</h3>
+        <h3>Potrebbero Interessarti</h3>
         <div class="square first">Lorem ipsum dolor</div>
         <div class="square second">Lorem ipsum dolor</div>
     </footer>
