[FIX] ADD ID TABLE + MOD BORDER COLLAPS

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
             </ul>
         </div>
         <div>
-            <table style="width: 100%;">
+            <table>
                 <thead>
                     <tr>
                         <td class="intestazione"><strong>Lorem ipsum dolor</strong></td>
                         <td class="intestazione"><strong>Lorem ipsum dolor</strong></td>
-                        <td class="intestazione" style="width: 60%;"><strong>Lorem ipsum dolor</strong></td>
+                        <td class="intestazione" id="last-td-thead"><strong>Lorem ipsum dolor</strong></td>
                     </tr>
                 </thead>
                 <tbody>
