[FIX] CLEANED CLASS & ID in html + FIX WIDTH HEADER

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <img id="logo-boolean" src="./img/logo.svg" alt="logo-boolean">
     </header>
-    <main id="container">
+    <main>
         <div id="title">
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
             <p>Scritto da <span>The Booleaner</span></p>
@@ -62,9 +62,9 @@
             <table>
                 <thead>
                     <tr>
-                        <td class="intestazione"><strong>Lorem ipsum dolor</strong></td>
-                        <td class="intestazione"><strong>Lorem ipsum dolor</strong></td>
-                        <td class="intestazione" id="last-td-thead"><strong>Lorem ipsum dolor</strong></td>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
                     </tr>
                 </thead>
                 <tbody>
