[FIX] STANDARD_CSS FILE

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booleaner Blog</title>
     <link rel="shortcut icon" href="./img/magnifying-glass-solid.svg" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css"> <!--BONUS-->
+    <!-- <link rel="stylesheet" href="./css_standard/style_standard.css"> NO BONUS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
