[FEAT] REMOVED ALL CLASS in html

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
 
 <body>
     <header>
-        <img id="logo-boolean" src="./img/logo.svg" alt="logo-boolean">
+        <img src="./img/logo.svg" alt="logo-boolean">
     </header>
     <main>
-        <div id="title">
-            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <p>Scritto da <span>The Booleaner</span></p>
-            <p>il 10/10/2020</p>
+        <div>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee </h1>
+            <h5>Scritto da <span>The Booleaner</span><br>
+                il 10/10/2020</h5>
         </div>
-        <div id="gallery">
+        <div>
             <img src="./img/tim-1.jpg" alt="img John S.">
             <img src="./img/tim-2.jpg" alt="img James L.">
-            <p>1st Photo: John S. and Hames L. Knight Foundation, by Scott Henrischsen</p>
-            <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+            <h5>1st Photo: John S. and Hames L. Knight Foundation, by Scott Henrischsen</h5>
+            <h5>2nd Photo: Wikimedia, by Paul Clarke</h5>
         </div>
-        <div class="lorem-description">
+        <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad tempora corporis a ipsum molestiae, rem
                 possimus similique itaque sequi at in magni adipisci ipsam iure! Quod asperiores fuga amet
                 Lorem, ipsum
@@ -47,7 +47,7 @@
                 distinctio saepe, similique deleniti quia nobis. Magnam a assumenda inventore sint ipsum commodi autem.
             </p>
         </div>
-        <div class="lorem-description">
+        <div>
             <ul>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum dolores minima ullam,
                     officiis sed
@@ -92,7 +92,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="lorem-description">
+        <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad tempora corporis a ipsum molestiae, rem
                 possimus similique itaque sequi at in magni adipisci ipsam iure! Quod asperiores fuga amet
                 Lorem, ipsum
@@ -112,8 +112,8 @@
 
     <footer>
         <h3>Potrebbero Interessarti</h3>
-        <div class="square first">Lorem ipsum dolor</div>
-        <div class="square second">Lorem ipsum dolor</div>
+        <div>Lorem ipsum dolor</div>
+        <div id="graph">Lorem ipsum dolor</div>
     </footer>
 
 
